# PaperDeformation

./: .gitignore  CMakeLists.txt  README.md  Readme.txt  primo(p0-6).nb  primo.nb
ANN/: ANN.cpp  ANN.h  bd_search.cpp  bd_tree.h  kd_dump.cpp  kd_search.cpp  kd_tree.h  pr_queue_k.h
DebugBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Primo.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  ann.vcxproj  ann.vcxproj.filters  cmake_install.cmake  isoex.vcxproj  isoex.vcxproj.filters  reconstruct.vcxproj  reconstruct.vcxproj.filters  viewer.vcxproj  viewer.vcxproj.filters
MayaScripts/: Readme.md  crease_pattern_generation.py
OpenMesh/OpenMesh/Core/: VS2008Core.sln  VS2008Core.vcxproj  VS2008Core.vcxproj.filters
OpenMesh/OpenMesh/Core/tmp/Windows_32_Debug/Core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Core.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
OpenMesh/OpenMesh/Tools/: VS2008Tools.sln  VS2008Tools.vcxproj  VS2008Tools.vcxproj.filters
OpenMesh/OpenMesh/Tools/lib/: libOpenMeshToolsd.lib
OpenMesh/OpenMesh/Tools/tmp/Windows_32_Debug/Tools.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Tools.lastbuildstate
OpenMesh/OpenMesh/lib/: OpenMeshCore.lib  OpenMeshTools.lib
cmake/: FindOpenMesh.cmake
data/: bunny.off  bunny_simple.off  cow.off  crease1.dcc  curve1.cpx  curve2.cpx  curve3.cpx  curve4.cpx  output-mesh-001.off  output-mesh-2.off
freeglutDebug/: freeglut_staticd.lib  freeglutd.exp  freeglutd.lib
freeglutRelease/lib/: freeglut.exp  freeglut.lib  freeglut_static.lib
gmm/: gmm_inoutput.h  gmm_interface.h
isoex/: ACGMakefile  ACGMakefile.proj  LICENSE
isoex/Docu/: ACGMakefile  isoex.docu
isoex/Docu/html/: CSG_8hh-source.html  Edge2VertexMapT_8hh-source.html  ExtendedMarchingCubesT_8hh-source.html  Fast__Distance_8hh-source.html  Grid_8hh-source.html  HeapDefinition_8hh-source.html  HelperVolume_8hh-source.html  ImplicitGrid_8hh-source.html  ImplicitMesh_8hh-source.html  ImplicitSphere_8hh-source.html  Implicit_8hh-source.html  LevelSetForces_8hh-source.html  LevelSetSurfaceT_8hh-source.html  LevelSetWidget_8hh-source.html  MCTables_8hh-source.html  MarchingCubesT_8hh-source.html  MarchingT_8hh-source.html  MatrixT_8hh-source.html  RegularGrid_8hh-source.html  ScalarGridT_8hh-source.html  Types_8hh-source.html  Vol__GrabberT_8hh-source.html  acg_style.css  annotated.html  classIsoEx_1_1CSG_1_1Difference-members.html  classIsoEx_1_1CSG_1_1Difference.html  classIsoEx_1_1CSG_1_1Intersection-members.html  classIsoEx_1_1CSG_1_1Intersection.html  classIsoEx_1_1CSG_1_1Union-members.html  classIsoEx_1_1CSG_1_1Union.html  classIsoEx_1_1Edge2VertexMapT-members.html  classIsoEx_1_1Edge2VertexMapT.html  classIsoEx_1_1ExtendedMarchingCubesT-members.html  classIsoEx_1_1ExtendedMarchingCubesT.html  classIsoEx_1_1Grid-members.html  classIsoEx_1_1Grid.html  classIsoEx_1_1Grid_1_1CubeIterator-members.html  classIsoEx_1_1Grid_1_1CubeIterator.html  classIsoEx_1_1Implicit-members.html  classIsoEx_1_1Implicit.html  (+38 more)
isoex/Extractors/: ExtendedMarchingCubesT.cc  ExtendedMarchingCubesT.hh  MarchingCubesT.cc  MarchingCubesT.hh
isoex/Grids/: ACGMakefile  Grid.hh  ImplicitGrid.hh  RegularGrid.cc  RegularGrid.hh  ScalarGridT.cc  ScalarGridT.hh
isoex/Implicits/: CSG.hh  Implicit.hh  ImplicitSphere.hh
paper_viewer/: BezierCurve.cpp  BezierCurve.h  Crease.cc  Crease.hh  CreasePatternParser.cpp  CreasePatternParser.h  GlutExaminer.cc  GlutViewer.cc  Matrix.hh  MeshViewer.cc  MeshViewer.hh  OpUnit.cpp  OpUnit.h  PrimoMeshViewer.cpp  PrimoMeshViewer.h  PrimoMeshViewer_GlobalOptimize.cpp  PrimoMeshViewer_LocalOptimize.cpp  PrimoMeshViewer_Utilities.cpp  PrismProperty.hh  SelfCollision.cc  Triangulation.cpp  Triangulation.h  Vector.hh  gl.hh  primoview.cc
primo_viewer/: GlutViewer.cc  PrimoMeshViewer.cpp  PrimoMeshViewer.h  PrimoMeshViewer_GlobalOptimize.cpp  PrimoMeshViewer_LocalOptimize.cpp  PrimoMeshViewer_Utilities.cpp  Transformation.cc  ValenceViewer.cc  nanort.h  primoview.cc
reconstruct/: ImplicitHoppe.hh  ImplicitRBF.cc  ImplicitRBF.hh  reconstruct.cc
viewer/: GlutExaminer.cc  GlutExaminer.hh  GlutViewer.hh  Matrix.hh  MeshViewer.cc  MeshViewer.hh  PrimoMeshViewer.cpp  PrimoMeshViewer.h  PrimoMeshViewer_GlobalOptimize.cpp  PrimoMeshViewer_LocalOptimize.cpp  PrimoMeshViewer_Utilities.cpp  Timer.hh  Transformation.cc  Transformation.hh  ValenceViewer.hh  Vector.hh  parallel.hh  valenceview.cc
